# floresta

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
docs/: convergence-loop.md  init-design.md
src/: lib.rs
